--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
 @import './author.css';
 
 @import './button.css';
+@import './buttonWpp.css';
 @import './obrigado.css';
 @import './head.css';
 @import './modalDepoimento.css';
