--- a/css/home.css
+++ b/css/home.css
@@ -25,10 +25,25 @@
     justify-content: start;
     align-items: center;
     height: 100%;
+    gap: 5rem;
+  }
+
+  #home .video {
+    background: var(--primary-color);
+    width: 100%;
+  }
+
+  #home .video:hover img {
+    filter: brightness(1.3);
+  }
+
+  #home .video img {
+    width: 100%;
+    transition: all 300ms ease-in-out;
   }
   
   #home .text {
-    margin-top: 80%;
+    margin-top: 10%;
     text-align: center;
     z-index: 4;
 
