--- a/css/home.css
+++ b/css/home.css
@@ -37,8 +37,13 @@
   }
 
   #home .video {
-    background: var(--primary-color);
     width: 100%;
+    height: 40%;
+  }
+
+  #home iframe {
+    width: 100%;
+    height: 100%;
   }
 
   #home .video:hover img {
@@ -166,6 +171,11 @@
       max-height: 100vh;
   
       /* mask-image: linear-gradient(to bottom, #000 80%, transparent)  */
+    }
+
+    header#home .video {
+      width: 100%;
+      height: 50%;
     }
 
     header#home .blush {
