--- a/css/home.css
+++ b/css/home.css
@@ -38,7 +38,7 @@
 
   #home .video {
     width: 100%;
-    height: 40%;
+    height: 30%;
   }
 
   #home iframe {
@@ -175,7 +175,7 @@
 
     header#home .video {
       width: 100%;
-      height: 50%;
+      height: 55%;
     }
 
     header#home .blush {
@@ -326,6 +326,10 @@
 
     header#home .content h1 span {
       font-size: 5.5rem;
+    }
+
+    header#home .video {
+      height: 47%;
     }
   }
   
